fixing button delete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body id="b">
     <header>
       <h1>Bookshelf Apps</h1>
       <img src="assets/icon/book.png" alt="" />
@@ -90,9 +90,48 @@
               </div> -->
             </div>
           </div>
+          <!-- <div class="popUp">
+            <div class="title-popup">
+              <h3>Apakah anda yakin ingin menghapus data ini ?</h3>
+              <img alt="" set="" class="question" />
+            </div>
+            <div class="action-popup">
+              <button id="oke">Oke</button>
+              <button id="cancel">Cancel</button>
+            </div>
+          </div>
+          <div class="popUp2">
+            <div class="title-popup2">
+              <h3>Data Berhasil Dihapus</h3>
+              <img alt="" set="" class="question2" />
+            </div>
+            <div class="action-popup2">
+              <button id="oke2">Oke</button>
+            </div>
+          </div> -->
+        </div>
+      </div>
+      <div class="popUp">
+        <div class="title-popup">
+          <h3>Apakah anda yakin ingin menghapus data ini ?</h3>
+          <img alt="" set="" class="question" />
+        </div>
+        <div class="action-popup">
+          <button id="oke">Oke</button>
+          <button id="cancel">Cancel</button>
+        </div>
+      </div>
+      <div class="popUp2">
+        <div class="title-popup2">
+          <h3>Data Berhasil Dihapus</h3>
+          <img alt="" set="" class="question2" />
+        </div>
+        <div class="action-popup2">
+          <button id="oke2">Oke</button>
         </div>
       </div>
     </div>
+    <div class="drawerPopup"></div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
